fixig pop up rewards z-index

--- a/src/sass/app.css
+++ b/src/sass/app.css
@@ -418,7 +418,7 @@ body #inputNumCat {
   align-items: center;
 }
 .app-trivia .header {
-  z-index: 30;
+  z-index: 25;
   width: 100vw;
   max-width: 600px;
   position: absolute;
@@ -457,7 +457,7 @@ body #inputNumCat {
   max-height: 40px;
 }
 .app-trivia .header .user-menu-container {
-  z-index: 5000;
+  z-index: 900000000;
   position: absolute;
   left: 0;
   top: 0;
@@ -899,7 +899,7 @@ body #inputNumCat {
   -webkit-animation: scaleUpRight 500ms cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 .app-trivia .panel-footer-container {
-  z-index: 20;
+  z-index: 24;
   width: 100vw;
   min-width: 240px;
   max-width: 600px;
@@ -915,7 +915,7 @@ body #inputNumCat {
   align-items: center;
 }
 .app-trivia .panel-footer-container .wrapper-bases-rewards {
-  z-index: 200;
+  z-index: 2000;
   width: 100%;
   height: 100%;
   display: flex;
@@ -1036,12 +1036,13 @@ body #inputNumCat {
 .app-trivia .panel-footer-container .questions-answered span {
   font-size: 1.5rem;
 }
-.app-trivia .panel-footer-container .wrapper-pop-up {
-  z-index: 8000;
+
+.wrapper-pop-up {
+  z-index: 900000;
   width: 100vw;
   height: 100vh;
   position: absolute;
-  bottom: 0;
+  top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1052,8 +1053,8 @@ body #inputNumCat {
   -ms-transform: translateY(10px);
   -o-transform: translateY(10px);
 }
-.app-trivia .panel-footer-container .wrapper-pop-up .pop-up-rewards {
-  z-index: 20000;
+.wrapper-pop-up .pop-up-rewards {
+  z-index: 200000;
   width: 90vw;
   max-width: 380px;
   height: 60%;
@@ -1069,19 +1070,20 @@ body #inputNumCat {
   -ms-border-radius: 26px;
   -o-border-radius: 26px;
 }
-.app-trivia .panel-footer-container .wrapper-pop-up .pop-up-rewards .wrapper-button {
+.wrapper-pop-up .pop-up-rewards .wrapper-button {
   z-index: 200000;
   width: 100%;
   height: 40px;
   display: flex;
   justify-content: flex-end;
 }
-.app-trivia .panel-footer-container .wrapper-pop-up .pop-up-rewards .wrapper-button .close-rewards {
+.wrapper-pop-up .pop-up-rewards .wrapper-button .close-rewards {
   width: 30px;
   height: 30px;
   margin-top: 0.5rem;
   margin-right: 0.5rem;
   padding-bottom: 3px;
+  background-color: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1090,17 +1092,11 @@ body #inputNumCat {
   font-size: 1.3rem;
   font-weight: 600;
   border-radius: 50%;
-  box-shadow: 0px 0px 5px #5a5a5a;
-  transition: all 250ms ease-in-out;
-  -webkit-transition: all 250ms ease-in-out;
-  -moz-transition: all 250ms ease-in-out;
-  -ms-transition: all 250ms ease-in-out;
-  -o-transition: all 250ms ease-in-out;
 }
-.app-trivia .panel-footer-container .wrapper-pop-up .pop-up-rewards .wrapper-button .close-rewards:hover {
+.wrapper-pop-up .pop-up-rewards .wrapper-button .close-rewards:hover {
   cursor: pointer;
 }
-.app-trivia .panel-footer-container .wrapper-pop-up .pop-up-rewards .wrapper-slider {
+.wrapper-pop-up .pop-up-rewards .wrapper-slider {
   z-index: 80000000;
   width: 100%;
   max-width: 600px;
@@ -1111,13 +1107,13 @@ body #inputNumCat {
   justify-content: center;
   align-items: center;
 }
-.app-trivia .panel-footer-container .wrapper-pop-up .pop-up-rewards .wrapper-slider .wrapper-image {
+.wrapper-pop-up .pop-up-rewards .wrapper-slider .wrapper-image {
   width: 100%;
   max-width: 580px;
   height: 80%;
   margin: 20px 0;
 }
-.app-trivia .panel-footer-container .wrapper-pop-up .pop-up-rewards .wrapper-slider .wrapper-image img {
+.wrapper-pop-up .pop-up-rewards .wrapper-slider .wrapper-image img {
   -o-object-fit: contain;
      object-fit: contain;
   width: 100%;
@@ -1125,10 +1121,10 @@ body #inputNumCat {
   height: 100%;
   min-height: 220px;
 }
-.app-trivia .panel-footer-container .wrapper-pop-up .pop-up-rewards .wrapper-slider .wrapper-image-hidden {
+.wrapper-pop-up .pop-up-rewards .wrapper-slider .wrapper-image-hidden {
   display: none;
 }
-.app-trivia .panel-footer-container .wrapper-pop-up .pop-up-rewards .wrapper-slider .arrow-container {
+.wrapper-pop-up .pop-up-rewards .wrapper-slider .arrow-container {
   position: absolute;
   width: 25px;
   height: 40px;
@@ -1142,34 +1138,34 @@ body #inputNumCat {
   -ms-transition: all 250ms ease-in-out;
   -o-transition: all 250ms ease-in-out;
 }
-.app-trivia .panel-footer-container .wrapper-pop-up .pop-up-rewards .wrapper-slider .arrow-container:disabled {
+.wrapper-pop-up .pop-up-rewards .wrapper-slider .arrow-container:disabled {
   box-shadow: 0px 0px 3px #a9a9a9;
 }
-.app-trivia .panel-footer-container .wrapper-pop-up .pop-up-rewards .wrapper-slider .arrow-container:disabled img {
+.wrapper-pop-up .pop-up-rewards .wrapper-slider .arrow-container:disabled img {
   display: none;
 }
-.app-trivia .panel-footer-container .wrapper-pop-up .pop-up-rewards .wrapper-slider .arrow-container:disabled:hover {
+.wrapper-pop-up .pop-up-rewards .wrapper-slider .arrow-container:disabled:hover {
   cursor: default;
 }
-.app-trivia .panel-footer-container .wrapper-pop-up .pop-up-rewards .wrapper-slider .arrow-container:hover {
+.wrapper-pop-up .pop-up-rewards .wrapper-slider .arrow-container:hover {
   cursor: pointer;
 }
-.app-trivia .panel-footer-container .wrapper-pop-up .pop-up-rewards .wrapper-slider .arrow-container img {
+.wrapper-pop-up .pop-up-rewards .wrapper-slider .arrow-container img {
   width: 100%;
   height: auto;
 }
-.app-trivia .panel-footer-container .wrapper-pop-up .pop-up-rewards .wrapper-slider .left-arrow {
+.wrapper-pop-up .pop-up-rewards .wrapper-slider .left-arrow {
   left: 1rem;
 }
-.app-trivia .panel-footer-container .wrapper-pop-up .pop-up-rewards .wrapper-slider .right-arrow {
+.wrapper-pop-up .pop-up-rewards .wrapper-slider .right-arrow {
   right: 1rem;
 }
-.app-trivia .panel-footer-container .wrapper-pop-up .pop-up-rewards .wrapper-slider .indicators-container {
+.wrapper-pop-up .pop-up-rewards .wrapper-slider .indicators-container {
   display: flex;
   position: absolute;
   bottom: 1rem;
 }
-.app-trivia .panel-footer-container .wrapper-pop-up .pop-up-rewards .wrapper-slider .indicators-container .indicator {
+.wrapper-pop-up .pop-up-rewards .wrapper-slider .indicators-container .indicator {
   height: 0.7rem;
   width: 0.7rem;
   border: none;
